--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.42",
     "prisma": "^3.15.2",
     "ts-node": "^10.8.1",
@@ -23,6 +24,7 @@
   "dependencies": {
     "@prisma/client": "^3.15.1",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
